# trabalho_3

./: CMakeLists.txt  Doxyfile  VM.sgen  VM.ysc
Machine_Vending/: .project
Machine_Vending/src/: sc_types.h
Machine_Vending/src-gen/: VM.c  VM.h  VM_required.h
app/: main.c
